tests/models/enum/unnamed/isize/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2)]
        isize
    ),
}
fn main() {}
